Diseño de una Galería de Imágenes Interactiva

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
     <div id="gallery" class="gallery"></div>
 
+<section class="video-explicativo">
+    <h2>Video explicativo de uso</h2>
+    <video controls width="600">
+        <source src="Video Explicativo.mp4" type="video/mp4">
+        Tu navegador no soporta la reproducción de video.
+    </video>
+</section>
+
     <script src="script.js"></script>
 </body>
 </html>
