Diseño de una Galería de Imágenes Interactiva

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <h1>Galería de Imágenes Interactiva</h1>
 
-    <div class="controls">
-        <input type="url" id="imageUrl" placeholder="Ingrese URL de la imagen">
-        <button id="addImage">Agregar Imagen</button>
-        <button id="deleteImage">Eliminar Imagen Seleccionada</button>
+    <div class="controles">
+        <input type="url" id="urlImagen" placeholder="Ingrese URL de la imagen">
+        <button id="agregarImagen">Agregar Imagen</button>
+        <button id="eliminarImagen">Eliminar Imagen Seleccionada</button>
     </div>
 
-    <div id="gallery" class="gallery"></div>
+    <div id="galeria" class="galeria"></div>
 
 <section class="video-explicativo">
     <h2>Video explicativo de uso</h2>
